--- a/storix-fe/package.json
+++ b/storix-fe/package.json
@@ -20,6 +20,7 @@
     "next-pwa": "^5.6.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-intersection-observer": "^10.0.2",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
