--- a/storix-fe/package.json
+++ b/storix-fe/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@serwist/next": "^9.5.0",
+    "@stomp/stompjs": "^7.2.1",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
