--- a/storix-fe/tsconfig.json
+++ b/storix-fe/tsconfig.json
@@ -37,8 +37,9 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
     "**/*.mts",
+    //".next/dev/types/**/*.ts",
+    ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
   ],
   "exclude": [
