--- a/storix-fe/package.json
+++ b/storix-fe/package.json
@@ -16,6 +16,7 @@
     "@stomp/stompjs": "^7.2.1",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-query-devtools": "^5.91.2",
+    "@tanstack/react-virtual": "^3.13.18",
     "axios": "^1.13.2",
     "next": "^16.0.10",
     "next-pwa": "^5.6.0",
